Bug 402639 - akregator doesn't know how to deal with "/tmp/mozilla_user0/0ZFsmr25.atom"
Summary: akregator doesn't know how to deal with "/tmp/mozilla_user0/0ZFsmr25.atom"
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.7.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-28 10:56 UTC by Philippe ROUBACH
Modified: 2018-12-28 14:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2018-12-28 10:56:54 UTC
SUMMARY
FF 64 , awesome rss 1.3.5

STEPS TO REPRODUCE

    Go to www.liberation.fr
    Click on rss icon
    a window open asking if i want to use akregator
    click on ok
    go to akregator to see what is recorded in "imported"
    select stream and "modify stream" in contextual menu
    in "general" tab the URL is "https:///tmp/mozilla_user0/0ZFsmr25.atom"

akregator says : can't find any stream on remote server.

EXPECTED RESULT

akregator knows how to deal with "/tmp/mozilla_user0/0ZFsmr25.atom"

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: openSuse Leap 15.0
(available in About System)
KDE Plasma Version: 5.12.6
KDE Frameworks Version: 5.45.0
Qt Version: 5.9.4
Comment 1 Laurent Montel 2018-12-28 11:19:21 UTC
where do you see the rss icon ?
do you have a specific plugin ?
Comment 2 Philippe ROUBACH 2018-12-28 11:33:06 UTC
As said in description awesome rss.

see my report "https://github.com/shgysk8zer0/awesome-rss/issues/126"
Comment 3 Laurent Montel 2018-12-28 12:54:58 UTC
it's still not give me info about where do you see rss icon...

But indeed it seems to be an akregator bug but I can't reproduce if you don't give me this info...
Comment 4 Laurent Montel 2018-12-28 12:55:49 UTC
"awesome rss" is a plugin ?
Comment 5 Laurent Montel 2018-12-28 14:06:58 UTC
Git commit e7b78b23bc4330a96a4c2605b4700de4897bb1fc by Laurent Montel.
Committed on 28/12/2018 at 14:06.
Pushed by mlaurent into branch 'Applications/18.12'.

Fix Bug 402639 - akregator doesn't know how to deal with "/tmp/mozilla_user0/0ZFsmr25.atom"

FIXED-IN: 5.10.1

M  +1    -1    src/command/createfeedcommand.cpp

https://commits.kde.org/akregator/e7b78b23bc4330a96a4c2605b4700de4897bb1fc