Fix Bug 402639 - akregator doesn't know how to deal with "/tmp/mozilla_user0/0ZFsmr25.atom"

FIXED-IN: 5.10.1
BUG: 402639